--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-pixel-website",
+  "name": "smart-pixel",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -13,18 +13,15 @@
     "postbuild": "node scripts/inject-console-capture.js"
   },
   "dependencies": {
-    "astro": "^4.15.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/typescript": "^1.11.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
     "@cosmicjs/sdk": "^1.5.5",
-    "lucide-astro": "^0.436.0",
-    "tailwindcss": "^3.4.0"
+    "astro": "^4.16.8",
+    "lucide-astro": "^0.468.0",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "glob": "^10.3.10"
+    "@types/node": "^22.7.6",
+    "typescript": "^5.6.3"
   }
 }
