--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "postbuild": "node scripts/inject-console-capture.js"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.0",
     "@cosmicjs/sdk": "^1.5.5",
-    "astro": "^4.16.8",
-    "lucide-astro": "^0.468.0",
-    "tailwindcss": "^3.4.13"
+    "astro": "^4.15.9",
+    "lucide-astro": "^0.441.0",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@types/node": "^22.7.6",
-    "typescript": "^5.6.3"
+    "@types/node": "^22.5.4"
   }
 }
